--- a/views/release_service.html
+++ b/views/release_service.html
@@ -36,9 +36,9 @@
  <div ng-show="ConfShow()">
     <div class="wrapper bg-white b-b">
       <ul class="nav nav-pills nav-sm">
-        <li ng-class="{'active':padderSelect=='list'}"><a ng-click="padderSelect='list'">任务列表</a></li>
-        <li ng-class="{'active':padderSelect=='new'}"><a ng-click="padderSelect='new'">创建发布单</a></li>
-        <li ng-class="{'active':padderSelect=='config'}"><a ng-click="padderSelect='config'">发布单配置</a></li>
+        <li ng-class="{'active':padderSelect=='list'}"><a ng-click="changepadder('list')">任务列表</a></li>
+        <li ng-class="{'active':padderSelect=='new'}"><a ng-click="changepadder('new')">创建发布单</a></li>
+        <li ng-class="{'active':padderSelect=='config'}"><a ng-click="changepadder('config')">发布单配置</a></li>
       </ul>
     </div>
     <div class="padder">
@@ -112,79 +112,11 @@
           <form>
               <div class="form-horizontal">
                 <div class="form-group">
-                  <label class="col-sm-5 control-label no-padding-right">发布模式</label>
-                  <div class="controls col-xs-12 col-sm-2">
-                    <div class="form-inline">
-                      <label class="lbl"></label>
-                      <span class="label label-xlg label-primary arrowed arrowed-right">Gated Launch</span>
-                      <input type="hidden" id="deploy_model_id"
-                        value="2" />
-                    </div>
-                  </div>
-                </div>
-                  <div class="form-group" id="deployType">
-                    <label class="col-sm-5 control-label no-padding-right"></label>
-                    <div class="controls col-sm-4 col-xs-12">
-                      <div class="form-inline">
-                        <div class="control-group">
-                          <label class="control-label bolder red">请选择：</label>
-                          
-                            <div class="checkbox">
-                              <label> <input name="deploy_Type" type="checkbox"
-                                class="ace" value="3"
-                                checked> <span class="lbl">&nbsp;10%灰度&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                              </label>
-                            </div>
-                          
-                            <div class="checkbox">
-                              <label> <input name="deploy_Type" type="checkbox"
-                                class="ace" value="4"
-                                checked> <span class="lbl">&nbsp;40%灰度&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                              </label>
-                            </div>
-                          
-                            <div class="checkbox">
-                              <label> <input name="deploy_Type" type="checkbox"
-                                class="ace" value="5"
-                                checked> <span class="lbl">&nbsp;70%灰度&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                              </label>
-                            </div>
-                          
-                            <div class="checkbox">
-                              <label> <input name="deploy_Type" type="checkbox"
-                                class="ace" value="6"
-                                checked> <span class="lbl">&nbsp;100%灰度&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                              </label>
-                            </div>
-                          
-
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                
-                
-
-                <div class="form-group">
-                  <label class="col-sm-5 control-label no-padding-right">设置发布模式是否需要暂停(灰度)</label>
-                  <div class="controls col-xs-12 col-sm-4">
-                    <input type="hidden" id="pc_tag_pause"
-                      value="true" /> <label> 
-                        <span class="label label-xlg label-primary arrowed arrowed-right">
-                        允许（请联系OPS相关负责人）
-                        </span>
-                    </label>
-                  </div>
-                </div>
-
-
-
-                <div class="form-group">
                   <label class="col-sm-5 control-label no-padding-right">设置容错阀值</label>
                   <div class="controls col-xs-12 col-sm-3">
                     <div class="col-xs-6 center">
                       <label></label>
-                      <span class="label label-xlg label-primary arrowed arrowed-right">5</span>
+                      <span class="label label-xlg label-primary arrowed arrowed-right">{{releaseConf.FaultTolerant}}</span>
                     </div>
                   </div>
                 </div>
@@ -195,7 +127,7 @@
                     <div class="col-xs-6 center">
                       <div class="knob-container inline">
                         <label></label>
-                        <span class="label label-xlg label-primary arrowed arrowed-right">3</span>
+                        <span class="label label-xlg label-primary arrowed arrowed-right">{{releaseConf.IdcParalle}}</span>
                       </div>
                     </div>
                   </div>
@@ -208,17 +140,6 @@
                       <div class="knob-container inline">
                       <span class="label label-xlg label-primary arrowed arrowed-right">
                         
-                          cdes-t
-                          <i class="message-star icon-star-empty light-grey" title="不需要发布的机房"></i>
-                        
-                          cdtb-tomcat
-                          <i class="message-star icon-star-empty light-grey" title="不需要发布的机房"></i>
-                        
-                          gztb-tomcat
-                          <i class="message-star icon-star-empty light-grey" title="不需要发布的机房"></i>
-                        
-                          gzyt-t
-                          <i class="message-star icon-star-empty light-grey" title="不需要发布的机房"></i>
                         
                           shnj-b<i class="message-star icon-star orange2" title="发布的机房"></i>
                           
@@ -244,43 +165,9 @@
                     <div class="col-xs-6 center">
                       <div class="knob-container inline">
                         <label></label>
-                        <span class="label label-xlg label-primary arrowed arrowed-right">4</span>
+                        <span class="label label-xlg label-primary arrowed arrowed-right">{{releaseConf.IdcInnerParalle}}</span>
                       </div>
                     </div>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-5 control-label no-padding-right">机房并行度是否允许暂停</label>
-                  <div class="controls col-xs-12 col-sm-4">
-                    <label>
-                      
-                      <span class="label label-xlg label-primary arrowed arrowed-right">
-                        不允许（请联系OPS相关负责人）
-                      
-                        </span>
-                    </label>
-                  </div>
-                </div>
-                
-                <div class="form-group">
-                  <label class="col-sm-5 control-label no-padding-right">发布时LB是否需要摘除流量</label>
-                  <div class="controls col-xs-12 col-sm-4">
-                    <label>
-                      <span class="label label-xlg label-primary arrowed arrowed-right">
-                        
-                        不摘除流量 (请联系相关OPS负责人)
-                      </span>
-                    </label>
-                  </div>
-                </div>
-
-                <div class="form-group" style="display:none">
-                  <label class="col-sm-5 control-label no-padding-right">发布模板</label>
-                  <div class="controls col-xs-12 col-sm-3">
-                    <label class="col-sm-4 control-label no-padding-right"><a
-                      href="231" target="_blank">231</a></label> <input type="hidden" id="glu_static_model_id"
-                      value="231 " />
                   </div>
                 </div>
 
@@ -319,50 +206,16 @@
         <div class="panel-heading">
           业务发布配置
         </div>
-				<div class="tab-pane in active" id="deploysetting">
+				<div class="tab-pane in active">
 					<div class="form-horizontal">
 						<div class="form-group">
 							<form>
-								<div class="form-group">
-									<label class="col-sm-5 control-label no-padding-right">设置发布模式</label>
-									<div class="controls col-xs-12 col-sm-2">
-										<div class="form-inline">
-												<div class="radio">
-													<label> <input name="models" type="radio" class="ace"
-														id="A/B" value="1"
-														/>
-														<span class="lbl">A/B</span>
-													</label>
-												</div>
-												<div class="radio">
-													<label> <input name="models" type="radio" class="ace"
-														id="Gated Launch" value="2"
-														checked="true" />
-														<span class="lbl">Gated Launch</span>
-													</label>
-												</div>
-										</div>
-									</div>
-								</div>
-								<div class="form-group">
-									<label class="col-sm-5 control-label no-padding-right">设置发布模式是否需要暂停(灰度)</label>
-									<div class="controls col-xs-12 col-sm-4">
-										<label> <input name="switch-field-1"
-											class="ace ace-switch" type="checkbox" id="pc_tag_pause"
-											checked="true" />
-											<span class="lbl"></span>
-										</label>
-									</div>
-								</div>
 								<div class="form-group">
 									<label class="col-sm-5 control-label no-padding-right">设置容错阀值</label>
 									<div class="controls col-xs-12 col-sm-3">
 										<div class="col-xs-6 center">
 											<div class="knob-container inline">
-												<input type="text" class="input-small knob"
-													value="5" data-min="0"
-													data-max="10" data-step="1" data-width="50" data-height="50"
-													data-thickness=".2" id="pc_fail_allow_count" />
+												<input type="text" class="input-small knob" ng-model="releaseConf.FaultTolerant" />
 											</div>
 										</div>
 									</div>
@@ -373,10 +226,7 @@
 									<div class="controls col-xs-12 col-sm-3">
 										<div class="col-xs-6 center">
 											<div class="knob-container inline">
-												<input type="text" class="input-small knob"
-													value="3" data-min="1"
-													data-max="10" data-step="1" data-width="50" data-height="50"
-													data-thickness=".2" id="pc_idc_threadcount" />
+												<input type="text" class="input-small knob"  ng-model="releaseConf.IdcParalle"/>
 											</div>
 										</div>
 									</div>
@@ -387,25 +237,20 @@
 									<div class="controls col-xs-12 col-sm-3">
 										<div class="col-xs-6 center">
 											<div class="knob-container inline">
-												<input type="text" class="input-small knob"
-													value="4" data-min="1"
-													data-max="10" data-step="1" data-width="50" data-height="50"
-													data-thickness=".2" id="pc_host_threadcount" />
+												<input type="text" class="input-small knob" ng-model="releaseConf.IdcInnerParalle"/>
 											</div>
 										</div>
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label class="col-sm-5 control-label no-padding-right">机房并行度是否需要暂停</label>
-									<div class="controls col-xs-12 col-sm-4">
-										<label> <input name="switch-field-1"
-											class="ace ace-switch" type="checkbox" id="pc_idc_pause" onclick="onPauseClick(this)"
-											checked="true" />
-
-
-											<span class="lbl"></span>
-										</label>
+									<label class="col-sm-5 control-label no-padding-right">单个操作的超时时间</label>
+									<div class="controls col-xs-12 col-sm-3">
+										<div class="col-xs-6 center">
+											<div class="knob-container inline">
+												<input type="text" class="input-small knob"  ng-model="releaseConf.TimeOut"/>
+											</div>
+										</div>
 									</div>
 								</div>
 
@@ -422,87 +267,19 @@
 									</thead>
 									<tbody>
 										
-													<tr>
-														<td>cdes-t</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" >
+													<tr ng-repeat="idc in idcs">
+														<td>{{idc.IdcCode}}</td>
+														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" ng-model="idc.enableRelease" >
 														<span class="lbl"></span>
 														</td>
 													</tr>
-												
-													<tr>
-														<td>cdtb-tomcat</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" >
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>gztb-tomcat</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" >
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>gzyt-t</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" >
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>shnj-b</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" checked="true">
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>shwgq-t</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" checked="true">
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>sydd-c</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" >
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-													<tr>
-														<td>tjhy-c</td>
-														<td><input name="check_list" class="ace ace-switch ace-switch-6" type="checkbox" checked="true">
-														<span class="lbl"></span>
-														</td>
-													</tr>
-												
-
+											
 									</tbody>
 								</table>
 									</div>
 								</div>
 
-								<!-- 按照服务池类型决定是否需要摘除流量 -->
-								
-									<div class="form-group">
-										<label class="col-sm-5 control-label no-padding-right">发布时LB是否需要摘除流量</label>
-										<div class="controls col-xs-12 col-sm-4">
-											<label> 
-											<input name="switch-field-1" class="ace ace-switch" type="checkbox" id="is_remove_flow" 	 />
-											<span class="lbl"></span>
-											</label>
-										</div>
-									</div>
-								<div class="form-group">
-									<label class="col-sm-5 control-label no-padding-right"
-										for="notification-mail">通知机制</label>
-									<div class="col-sm-4">
-										<input type="text" name="tags" id="notification-mail"
-											value="vivicai@pptv.com" placeholder="请输入需通知的邮箱..." />
-									</div>
-								</div>
+						
 
 
 								<div class="clearfix form-actions">
@@ -512,7 +289,7 @@
 										</button>
 										&nbsp; &nbsp; &nbsp;
 										<button class="btn btn-info" type="button"
-											onclick="commitDeploySettings()">
+											ng-click="commitDeploySettings()">
 											<i class="icon-ok bigger-110"></i> 提交
 										</button>
 									</div>
