update release front js

--- a/views/management_idcs.html
+++ b/views/management_idcs.html
@@ -42,7 +42,7 @@
       <div class="row-row">
         <div class="cell">
           <div class="cell-inner">
-            <div class="wrapper-lg">
+            <div class="wrapper-lg" ng-show="selectedidc">
               <!-- fields -->
               <div class="form-horizontal">
                   <div class="panel panel-default ">
