--- a/views/release_service.html
+++ b/views/release_service.html
@@ -87,16 +87,23 @@
             </thead>
             <tbody>
               <tr ng-repeat="release in releases">
-				  <td>{{release.Id}}</td>
-				  <td>{{release.ReleaseUser.Username}}</td>
-				  <td>{{release.ReleaseTime}}</td>
-				  <td>{{release.ImageTag}}</td>
-                  <td><span class="label label-lg label-primary arrowed-in">审核通过</span></td>
-				  <td>{{release.ReviewUser.Username}}</td>
-                  <td>{{release.OperationUser.Username}}</td>
-				  <td>{{release.OperationTime}}</td>
-                  <td><span class="label label-lg label-success">部署成功</span></td>
-                  <td><a class="blue" title="详情" ng-click="selectTask(release)"><i class="glyphicon-zoom-in glyphicon"></i></a></td>
+								<td>{{release.Id}}</td>
+								<td>{{release.ReleaseUser.Username}}</td>
+								<td>{{release.ReleaseTime}}</td>
+								<td>{{release.ImageTag}}</td>
+								<td ng-show="release.ReviewUser"><span class="label label-lg label-primary arrowed-in">审核通过</span></td>
+								<td ng-hide="release.ReviewUser"><span class="label label-lg label-purple arrowed-in">未审核</span></td>
+								<td>{{release.ReviewUser.Username}}</td>
+								<td>{{release.OperationUser.Username}}</td>
+								<td>{{release.OperationTime}}</td>
+								<td ng-show="release.TaskStatus == 0"><span class="label label-lg label-default">未准备</span></td>
+								<td ng-show="release.TaskStatus == 1"><span class="label label-lg label-primary">已准备</span></td>
+								<td ng-show="release.TaskStatus == 2"><span class="label label-lg label-info">部署中</span></td>
+								<td ng-show="release.TaskStatus == 3"><span class="label label-lg label-warning">已暂停</span></td>
+								<td ng-show="release.TaskStatus == 4"><span class="label label-lg label-success">部署成功</span></td>
+                <td ng-show="release.TaskStatus == 5"><span class="label label-lg label-danger">部署失败</span></td>
+								<td ng-show="release.TaskStatus == 6"><span class="label label-lg label-inverse">已取消</span></td>
+                <td><a class="blue" title="详情" ng-click="selectTask(release)"><i class="glyphicon-zoom-in glyphicon"></i></a></td>
               </tr>
               </tbody>
               <tfoot class="hide-if-no-paging">
@@ -303,14 +310,24 @@
           发布单详情
         </div>
 				<div class="page-content">
-					<div  class="center" style="color:red"></div>
 					<div class="table-responsive">
 						<h4 class="header blue bolder smaller">操作</h4>
 					<div>
 							
-									<button class="btn btn-app btn-info btn-sm" ng-click="changepadder('detail')">
+									<button ng-show="selectedTask.TaskStatus > 1" class="btn  btn-info btn-sm" ng-click="changepadder('detail')">
 										<i class="fa-clock-o bigger-200"></i>
 										发布记录
+									</button>
+
+									<button ng-show="selectedTask.TaskStatus == 0" class="btn  btn-info btn-sm" ng-click="reviewTask()">
+										<i class="fa-clock-o bigger-200"></i>
+										审核
+									</button>
+
+
+									<button ng-show="selectedTask.TaskStatus == 1" class="btn  btn-info btn-sm" ng-click="operationTask()">
+										<i class="fa-clock-o bigger-200"></i>
+										发布
 									</button>
 
 							<button class="btn btn-app btn-error btn-sm" ng-click="changepadder('list')">
@@ -336,9 +353,13 @@
 									<td style="width:15%;">{{selectedService.Name}}</td>
 									<td style="width:15%;">{{selectedTask.ReleaseUser.Username}}</td>
 									<td style="width:15%;">{{selectedTask.ReleaseTime}}</td>
-									<td style="width:15%;">
-												<span class="label label-success arrowed">部署成功</span>
-									</td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 0"><span class="label label-lg label-default">未准备</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 1"><span class="label label-lg label-primary">已准备</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 2"><span class="label label-lg label-info">部署中</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 3"><span class="label label-lg label-warning">已暂停</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 4"><span class="label label-lg label-success">部署成功</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 5"><span class="label label-lg label-danger">部署失败</span></td>
+									<td style="width:15%;" ng-show="selectedTask.TaskStatus == 6"><span class="label label-lg label-inverse">已取消</span></td>
 								</tr>
 							</tbody>
 						</table>
@@ -354,11 +375,8 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td buid="6084" style="width:20%;">
-									
-												审核通过
-
-									</td>
+									<td style="width:20%;" ng-show="selectedTask.ReviewUser">审核通过</td>
+									<td style="width:20%;" ng-hide="selectedTask.ReviewUser">未审核</td>									
 									<td style="width:20%;">
 
 												{{selectedTask.ReviewUser.Username}}
@@ -531,32 +549,17 @@
 					<table id="deployHostStatuslists"	class="table table-striped table-bordered table-hover">
 						<thead>
 							<tr>
-								<th style="width:3%;">主机ID</th>
-								<th style="width:25%;">主机名</th>
 								<th style="width:10%;">主机IP</th>
-								<th style="width:7%;">所属机房</th>
-								<th style="width:5%;">发布类型</th>
-								<th style="width:10%;">发布状态</th>
 								<th style="width:30%;">发布日志</th>
 							</tr>
 						</thead>
 						<tbody>
 							
-							<tr>
-								<td style="width:3%;">297393</td>
-								<td style="width:25%;">shwgq-t-tomcat-189-173.ad-delv-tf.lin.idc.pplive.cn</td>
-								<td style="width:10%;"><a href="#" onclick="viewDetailInfo('10.203.189.173','24627')">10.203.189.173</a></td>
-								<td style="width:7%;">shwgq-t</td>
-								<td style="width:5%;">10%灰度</td>
-								<td style="width:10%;">
-										<span class="label label-success arrowed">部署成功</span>
-								</td>
-								<td style="width:30%;"><pre>Debug information--><br/>shield relust :true<br/>stop server...
-downloading war file...
-The War file has been successfully downloaded
-The md5 file has been successfully downloaded
-md5 check...<br/>update or installing...<br/>/home/pplive/web/ikandelivery/version.html->currentVersion:20170111.1<br/>unshield relust :true<br/>starting...
-The application is deployed</pre></td>
+							<tr ng-repeat="release in releasestatus">
+
+								<td style="width:10%;">{{release.Instance}}</td>
+
+								<td style="width:30%;"><pre>{{release.ReleaseMsg}}</pre></td>
 							</tr>
 							</tbody>
 						</table>
@@ -566,9 +569,7 @@ The application is deployed</pre></td>
 			
 			
 		</div>
-		
-		
-		
+	
 	</div>
 </div>
 
