--- a/views/release_service.html
+++ b/views/release_service.html
@@ -507,24 +507,19 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;
 			<button class="btn btn-danger" ng-click="abandonTask(selectedTask.Id)" style="margin-left:50%">Abandon</button>
 		</h4>
-		
+		<!--
 		<table class="table table-striped table-bordered table-hover tdcenter" cellspacing="0" cellpadding="0" style="width:98%!important;">
 			<thead>
 				<tr>
-					<th>部署类型</th>
-					<th>PLAN ID</th>
+					<th>部署机房</th>
 					<th>进度</th>
-					<!-- <th>操作</th> -->
 				</tr>
 			</thead>
 			<tbody>
 				
 					<tr>
-						<td style="width:5%;">10%灰度</td>
-						
 						<td style="width:15%;">
-							<font id="showInfo" class="" >shnj-b机房&nbsp;</font>
-							<font id="104989-Info" class="" >Data Loading</font>
+							<font>shnj-b机房&nbsp;</font>
 						</td>
 						
 						<td style="width:70%;">
@@ -532,34 +527,38 @@
 								<div id="104989-Bar" class="progress-bar progress-bar-success"></div>
 							</div>
 						</td>
-						<!-- <td style="width:10%;"><button class="btn btn-danger" onclick="abandonDeploymentPlan()">Abandon</button></td> -->
-						<!-- <td style="width:10%;"><button class="btn btn-danger" onclick="goTogluConsole()">Abandon</button></td> -->
 						
 					</tr>
 				
 			</tbody>
 		</table>
+		-->
 		<h4 class="header blue bolder smaller">发布主机状态</h4>
 		<div class="tab-pane in active">
 			<div class="row">
 				<div class="col-xs-12">
-<!-- 					<div class="table-header">Host and Agent Information</div>
- -->					<div class="table-responsive">
+				<div class="table-responsive">
 					
 					<table id="deployHostStatuslists"	class="table table-striped table-bordered table-hover">
 						<thead>
 							<tr>
 								<th style="width:10%;">主机IP</th>
+								<th style="width:10%;">所属机房</th>
+								<th style="width:10%;">发布状态</th>
 								<th style="width:30%;">发布日志</th>
 							</tr>
 						</thead>
 						<tbody>
 							
-							<tr ng-repeat="release in releasestatus">
+							<tr ng-repeat="instance in selectedTask.ReleaseResult">
 
-								<td style="width:10%;">{{release.Instance}}</td>
-
-								<td style="width:30%;"><pre>{{release.ReleaseMsg}}</pre></td>
+								<td style="width:10%;">{{instance.Instance.IpAddr}}</td>
+								<td style="width:10%;">{{instance.IdcCode}}</td>
+								<td ng-show="instance.Status == 0"><span class="label label-lg label-primary">已准备</span></td>
+								<td ng-show="instance.Status == 1 ||instance.Status == 2"><span class="label label-lg label-info">部署中</span></td>
+								<td ng-show="instance.Status == 3"><span class="label label-lg label-success">部署成功</span></td>
+                <td ng-show="instance.Status == 4"><span class="label label-lg label-danger">部署失败</span></td>
+								<td style="width:30%;"><pre>{{instance.ReleaseMsg}}</pre></td>
 							</tr>
 							</tbody>
 						</table>
