--- a/views/blocks/header.html
+++ b/views/blocks/header.html
@@ -119,7 +119,7 @@
               </li>
               <li class="divider"></li>
               <li>
-                <a ui-sref="access.signin">Logout</a>
+                <a ui-sref="access.signin" ng-click="logout()">Logout</a>
               </li>
             </ul>
             <!-- / dropdown -->
