--- a/views/index.html
+++ b/views/index.html
@@ -52,6 +52,7 @@
   <script src="js/main.js"></script>
   <script src="js/services/ui-load.js"></script>
   <script src="js/services/auth-service.js"></script>
+  <script src="js/services/cache.js"></script>
   <script src="js/services/httpinterceptor.js"></script>
   <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
