improve and perfect

--- a/views/management_auth.html
+++ b/views/management_auth.html
@@ -41,7 +41,7 @@
       <div class="row-row">
         <div class="cell">
           <div class="cell-inner">
-            <div class="wrapper-lg">
+            <div class="wrapper-lg" ng-show="selectedrole">
               <!-- fields -->
               <div class="panel panel-default">
                   <div class="panel-heading">
