--- a/views/release_service.html
+++ b/views/release_service.html
@@ -43,7 +43,7 @@
     </div>
     <div class="padder">
       <div class="panel panel-default" ng-show="padderSelect=='list'">
-        <div class="panel-heading">
+        <div class="panel-heading font-bold">
           任务列表
         </div>
         <div class="panel-body b-b b-light">
